# unswayed-server

./: .env.exemple  .gitignore  Cargo.toml  LICENSE  README.md  bucket_policy.json
migrations/2020-05-31-212905_add_users/: up.sql
migrations/2020-05-31-225952_add_tokens/: down.sql  up.sql
migrations/2020-06-02-175459_add_images/: down.sql  up.sql
migrations/2020-07-29-221324_remove_token_type/: down.sql  up.sql
readme/: README.md  auth.md  create.md  refresh.md  users.md
readme/files/: get.md  upload.md
readme/special/: token.md  token_keepalive.md
readme/users/: get.md  lists.md  me.md  mine.md  mine_paged.md  upload.md
readme/users/token/: special.md  special_keepalive.md
src/: errors.rs  handlers.rs  handlers_api.rs  main.rs  models.rs  routes_api.rs  routes_auth.rs  s3.rs  schema.rs  upload.rs  validator.rs
src/endpoints/: api_files_get.rs  api_files_upload.rs  api_users_me.rs  api_users_mine.rs  api_users_mine_paged.rs  auth.rs  auth_user.rs  create.rs  create_user.rs  get_file.rs  mod.rs  my_files.rs  my_info.rs  refresh.rs  refresh_token.rs  upload_files.rs
src/s3_utils/: mod.rs  s3.rs  s3client.rs  upload.rs
src/utils/: email_valid.rs  errors.rs  get_user_id.rs  mod.rs  upload.rs
