[package]
name = "unswayed-server"
version = "0.1.0"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-multipart = "0.2.0"
actix-threadpool = "0.3.2"
actix-web-httpauth = "0.4.1"
actix-web = { version = "2.0.0", features = ["openssl"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.11", features = ["serde"] }
sanitize-filename = "0.2"
rusoto_core = "0.44.0"
rusoto_s3 = "0.44.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.5"
dotenv = "0.15.0"
nanoid = "0.3.0"
regex = "1.3.9"
r2d2 = "0.8.8"
serde = "1.0"
rust-argon2 = "0.8"
rand = "0.7.3"