[package]
name = "unswayed-server"
version = "0.1.0"
authors = ["Martichou <martichou.andre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1"
actix-multipart = "0.3"
actix-threadpool = "0.3"
actix-web-httpauth = "0.5"
actix-web = { version = "3.2", features = ["openssl"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sanitize-filename = "0.3"
rusoto_core = "0.45"
rusoto_s3 = "0.45"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.8"
futures = "0.3"
dotenv = "0.15"
nanoid = "0.3"
regex = "1.4"
r2d2 = "0.8"
serde = "1.0"
rust-argon2 = "0.8"
rand = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
async-std = "1.6"
